--- a/home/package.json
+++ b/home/package.json
@@ -8,23 +8,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@module-federation/nextjs-ssr": "0.0.1-beta.12",
+    "@module-federation/nextjs-ssr": "0.0.1-beta.23",
     "lodash": "^4.17.21",
     "next": "12.0.8",
     "next-compose-plugins": "^2.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-ssr-prepass": "^1.5.0",
     "sass": "^1.49.0",
     "webpack": "^5.66.0",
     "webpack-merge": "^5.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
+    "@babel/eslint-parser": "^7.16.5",
     "@babel/parser": "^7.16.8",
     "@babel/preset-env": "^7.16.8",
+    "@babel/preset-typescript": "^7.16.7",
     "@types/node": "17.0.9",
     "@types/react": "17.0.38",
-    "babel-eslint": "^10.1.0",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "typescript": "4.5.4"
