--- a/pdp/package.json
+++ b/pdp/package.json
@@ -8,16 +8,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@module-federation/nextjs-ssr": "0.0.1-beta.12",
+    "@module-federation/nextjs-ssr": "0.0.1-beta.23",
     "lodash": "^4.17.21",
     "next": "12.0.8",
     "next-compose-plugins": "^2.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-ssr-prepass": "^1.5.0",
     "webpack": "^5.66.0",
     "webpack-merge": "^5.8.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.12",
+    "@babel/eslint-parser": "^7.16.5",
+    "@babel/parser": "^7.16.12",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
     "@types/node": "17.0.9",
     "@types/react": "17.0.38",
     "eslint": "8.7.0",
