--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
     "@chakra-ui/react": "^1.7.4",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@module-federation/nextjs-ssr": "0.0.1-beta.12",
+    "@module-federation/nextjs-ssr": "0.0.1-beta.23",
     "cross-env": "^7.0.3",
     "express": "^4.17.2",
     "framer-motion": "^5",
@@ -21,11 +21,17 @@
     "next-compose-plugins": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-ssr-prepass": "^1.5.0",
     "sass": "^1.49.0",
     "webpack": "^5.66.0",
     "webpack-merge": "^5.8.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.12",
+    "@babel/eslint-parser": "^7.16.5",
+    "@babel/parser": "^7.16.12",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
     "@types/node": "^17.0.9",
     "@types/react": "^17.0.38",
     "eslint": "^8.7.0",
