--- a/pdp/package.json
+++ b/pdp/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@module-federation/next-catchall": "https://github.com/module-federation/next-catchall.git",
     "@module-federation/nextjs-ssr": "0.0.1-beta.23",
     "lodash": "^4.17.21",
     "next": "12.0.8",
@@ -28,6 +29,9 @@
     "@types/react": "17.0.38",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
-    "typescript": "4.5.4"
+    "next-shared-logic": "file:../shared",
+    "route-matcher": "file:../route-matcher",
+    "typescript": "4.5.4",
+    "webpack-federated-stats-plugin": "^2.0.8"
   }
 }
