--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^1.7.4",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@module-federation/next-catchall": "https://github.com/module-federation/next-catchall.git",
     "@module-federation/nextjs-ssr": "0.0.1-beta.23",
     "cross-env": "^7.0.3",
     "express": "^4.17.2",
@@ -36,7 +37,9 @@
     "@types/react": "^17.0.38",
     "eslint": "^8.7.0",
     "eslint-config-next": "^12.0.8",
-    "parse-json": "^6.0.2",
-    "typescript": "^4.5.4"
+    "next-shared-logic": "file:../shared",
+    "route-matcher": "file:../route-matcher",
+    "typescript": "^4.5.4",
+    "webpack-federated-stats-plugin": "^2.0.8"
   }
 }
