--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^1.7.4",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@module-federation/next-catchall": "https://github.com/module-federation/next-catchall.git",
     "@module-federation/nextjs-ssr": "0.0.1-beta.23",
     "framer-motion": "^5.6.0",
     "lodash": "^4.17.21",
@@ -35,6 +36,9 @@
     "@types/react": "^17.0.38",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
-    "typescript": "^4.5.4"
+    "next-shared-logic": "file:../shared",
+    "route-matcher": "file:../route-matcher",
+    "typescript": "^4.5.4",
+    "webpack-federated-stats-plugin": "^2.0.8"
   }
 }
