--- a/home/package.json
+++ b/home/package.json
@@ -21,13 +21,9 @@
     "webpack-merge": "^5.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.7",
-    "@babel/eslint-parser": "^7.16.5",
-    "@babel/parser": "^7.16.8",
-    "@babel/preset-env": "^7.16.8",
-    "@babel/preset-typescript": "^7.16.7",
     "@types/node": "17.0.9",
     "@types/react": "17.0.38",
+    "@types/react-dom": "^17.0.11",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "next-shared-logic": "file:../shared",
