--- a/shared/package.json
+++ b/shared/package.json
@@ -16,6 +16,7 @@
     "feather-route-matcher": "4.0.0",
     "html-to-react": "1.4.7",
     "json-stringify-deterministic": "1.0.2",
+    "react": "^17.0.2",
     "sort-keys-recursive": "2.1.2",
     "webpack-virtual-modules": "0.4.3"
   }
