--- a/shell/package.json
+++ b/shell/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "shell",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
@@ -10,12 +10,12 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.4",
+    "@emotion/cache": "^11.7.1",
     "@emotion/react": "^11",
+    "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11",
     "@module-federation/next-catchall": "https://github.com/module-federation/next-catchall.git",
     "@module-federation/nextjs-ssr": "0.0.1-beta.23",
-    "cross-env": "^7.0.3",
-    "express": "^4.17.2",
     "framer-motion": "^5",
     "lodash": "^4.17.21",
     "next": "^12.0.8",
@@ -25,16 +25,14 @@
     "react-ssr-prepass": "^1.5.0",
     "sass": "^1.49.0",
     "webpack": "^5.66.0",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "zustand": "^3.6.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.12",
-    "@babel/eslint-parser": "^7.16.5",
-    "@babel/parser": "^7.16.12",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-typescript": "^7.16.7",
+    "@emotion/babel-plugin": "^11.7.2",
     "@types/node": "^17.0.9",
     "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "eslint": "^8.7.0",
     "eslint-config-next": "^12.0.8",
     "next-shared-logic": "file:../shared",
