--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
     "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.4",
     "@emotion/react": "^11.7.1",
+    "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
     "@module-federation/next-catchall": "https://github.com/module-federation/next-catchall.git",
     "@module-federation/nextjs-ssr": "0.0.1-beta.23",
@@ -27,13 +28,9 @@
     "zustand": "^3.6.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.12",
-    "@babel/eslint-parser": "^7.16.5",
-    "@babel/parser": "^7.16.12",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-typescript": "^7.16.7",
     "@types/node": "^17.0.10",
     "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "next-shared-logic": "file:../shared",
