--- a/home/package.json
+++ b/home/package.json
@@ -16,7 +16,6 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-ssr-prepass": "^1.5.0",
-    "sass": "^1.49.0",
     "webpack": "^5.66.0",
     "webpack-merge": "^5.8.0"
   },
@@ -24,11 +23,15 @@
     "@types/node": "17.0.9",
     "@types/react": "17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
+    "eslint-plugin-react": "^7.28.0",
     "next-shared-logic": "file:../shared",
-    "route-matcher": "file:../route-matcher",
+    "sass": "^1.49.0",
     "typescript": "^4.5.4",
-    "webpack-federated-stats-plugin": "^2.0.8"
+    "webpack-federated-stats-plugin": "^2.0.8",
+    "zustand": "^3.6.9"
   }
 }
