--- a/products/package.json
+++ b/products/package.json
@@ -20,15 +20,18 @@
     "webpack-merge": "^5.8.0"
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "^11.7.2",
     "@types/node": "17.0.9",
     "@types/react": "17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
+    "eslint-plugin-react": "^7.28.0",
     "next-shared-logic": "file:../shared",
-    "route-matcher": "file:../route-matcher",
-    "typescript": "4.5.4",
-    "webpack-federated-stats-plugin": "^2.0.8"
+    "sass": "^1.49.0",
+    "typescript": "^4.5.4",
+    "webpack-federated-stats-plugin": "^2.0.8",
+    "zustand": "^3.6.9"
   }
 }
