--- a/shell/package.json
+++ b/shell/package.json
@@ -8,36 +8,37 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.1.1",
-    "@chakra-ui/react": "^1.7.4",
-    "@emotion/cache": "^11.7.1",
-    "@emotion/react": "^11",
-    "@emotion/server": "^11.4.0",
-    "@emotion/styled": "^11",
     "@module-federation/next-catchall": "https://github.com/module-federation/next-catchall.git",
     "@module-federation/nextjs-ssr": "0.0.1-beta.23",
-    "framer-motion": "^5",
     "lodash": "^4.17.21",
-    "next": "^12.0.8",
+    "next": "12.0.8",
     "next-compose-plugins": "^2.2.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-ssr-prepass": "^1.5.0",
-    "sass": "^1.49.0",
     "webpack": "^5.66.0",
-    "webpack-merge": "^5.8.0",
-    "zustand": "^3.6.9"
+    "webpack-merge": "^5.8.0"
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "^11.7.2",
-    "@types/node": "^17.0.9",
-    "@types/react": "^17.0.38",
+    "@chakra-ui/icons": "^1.1.1",
+    "@chakra-ui/react": "^1.7.4",
+    "@chakra-ui/theme-tools": "^1.3.1",
+    "@emotion/react": "^11.7.1",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.6.0",
+    "@types/node": "17.0.9",
+    "@types/react": "17.0.38",
     "@types/react-dom": "^17.0.11",
-    "eslint": "^8.7.0",
-    "eslint-config-next": "^12.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
+    "eslint": "8.7.0",
+    "eslint-config-next": "12.0.8",
+    "eslint-plugin-react": "^7.28.0",
+    "framer-motion": "^5.6.0",
     "next-shared-logic": "file:../shared",
-    "route-matcher": "file:../route-matcher",
+    "sass": "^1.49.0",
     "typescript": "^4.5.4",
-    "webpack-federated-stats-plugin": "^2.0.8"
+    "webpack-federated-stats-plugin": "^2.0.8",
+    "zustand": "^3.6.9"
   }
 }
