--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.4",
+    "@chakra-ui/theme-tools": "^1.3.1",
     "@emotion/react": "^11.7.1",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
@@ -31,10 +32,12 @@
     "@types/node": "^17.0.10",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
+    "eslint-plugin-react": "^7.28.0",
     "next-shared-logic": "file:../shared",
-    "route-matcher": "file:../route-matcher",
     "typescript": "^4.5.4",
     "webpack-federated-stats-plugin": "^2.0.8"
   }
