--- a/products/package.json
+++ b/products/package.json
@@ -17,7 +17,12 @@
     "react-dom": "17.0.2",
     "react-ssr-prepass": "^1.5.0",
     "webpack": "^5.66.0",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "next-shared-logic": "file:../shared",
+    "sass": "^1.49.0",
+    "typescript": "^4.5.4",
+    "webpack-federated-stats-plugin": "^2.0.8",
+    "zustand": "^3.6.9"
   },
   "devDependencies": {
     "@types/node": "17.0.9",
@@ -27,11 +32,6 @@
     "@typescript-eslint/parser": "^5.10.2",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
-    "eslint-plugin-react": "^7.28.0",
-    "next-shared-logic": "file:../shared",
-    "sass": "^1.49.0",
-    "typescript": "^4.5.4",
-    "webpack-federated-stats-plugin": "^2.0.8",
-    "zustand": "^3.6.9"
+    "eslint-plugin-react": "^7.28.0"
   }
 }
