--- a/ui/package.json
+++ b/ui/package.json
@@ -20,13 +20,16 @@
     "lodash": "^4.17.21",
     "next": "12.0.8",
     "next-compose-plugins": "^2.2.1",
+    "next-shared-logic": "file:../shared",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-ssr-prepass": "^1.5.0",
     "sass": "^1.49.0",
     "webpack": "^5.66.0",
     "webpack-merge": "^5.8.0",
-    "zustand": "^3.6.9"
+    "zustand": "^3.6.9",
+    "typescript": "^4.5.4",
+    "webpack-federated-stats-plugin": "^2.0.8"
   },
   "devDependencies": {
     "@types/node": "^17.0.10",
@@ -36,9 +39,6 @@
     "@typescript-eslint/parser": "^5.10.2",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
-    "eslint-plugin-react": "^7.28.0",
-    "next-shared-logic": "file:../shared",
-    "typescript": "^4.5.4",
-    "webpack-federated-stats-plugin": "^2.0.8"
+    "eslint-plugin-react": "^7.28.0"
   }
 }
