add async updates and catchall dep ref

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   ],
   "scripts": {
     "dev": "concurrently \"cd shell && yarn dev\" \"cd home && yarn dev\" \"cd products && yarn dev\" \"cd ui && yarn dev\"",
+    "wsdev": "concurrently \"wsrun --parallel dev\"",
     "build": "concurrently \"cd shell && yarn build\" \"cd home && yarn build\" \"cd products && yarn build\" \"cd ui && yarn build\"",
     "start": "concurrently \"wsrun --parallel start\""
   },
